package at.jku.se.smarthome.model;

/**
 * Represents the severity or category of an in-app notification.
 */
public enum NotificationType {
    INFO, SUCCESS, FAILURE, WARNING
}
